fix header size for each section on small media

--- a/css/theme-brown2.css
+++ b/css/theme-brown2.css
@@ -269,7 +269,7 @@ h6,
 }
 @media all and (max-width: 768px) {
   h1 {
-    font-size: 40px;
+    font-size: 27px;
     line-height: 48px;
     font-weight: 300;
   }
